--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
       </div>
     
 
-    <div class = "container">
+    <div class ="container bg-dark">
       <div class="row">
         <div class="col-6">
-          <h1 class="text-center bg-dark text-light" id = "user-choice">test</h1>
+          <h1 class="text-center text-light" id = "user-choice">🧍</h1>
         </div>
         <div class="col-6">
-          <h1 class="text-center bg-dark text-light" id="computer-choice">test</h1>
+          <h1 class="text-center text-light" id ="computer-choice">💻</h1>
+          
         </div>
       </div>
     </div>
