Added tie alert for when user and computer have a tie. Consolidated code in clearPreviousAlerts() function to one line to hide all alerts

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
             <div class="alert alert-danger text-center collapse" id="player-failure" role="alert">
               Have you tried turning it off and back on again?
             </div>
+            <div class="alert alert-warning text-center collapse tie" role="alert">
+              Tie! The human and computer live to fight another day
+            </div>
           </div>
           <!-- column 2  -->
           <div class="col-5 bg-dark">
@@ -51,6 +54,9 @@
             </div>
             <div class="alert alert-danger text-center collapse" id="computer-failure" role="alert">
               Error! Error! Does not compute!
+            </div>
+            <div class="alert alert-warning text-center collapse tie" role="alert">
+              Tie! The human and computer live to fight another day
             </div>
           </div>
         </div>
