Began to flesh out readme

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               Have you tried turning it off and back on again?
             </div>
             <div class="alert alert-warning text-center collapse tie" role="alert">
-              Tie! The human and computer live to fight another day
+              We have to try to score more points than they do
             </div>
           </div>
           <!-- column 2  -->
@@ -56,7 +56,7 @@
               Error! Error! Does not compute!
             </div>
             <div class="alert alert-warning text-center collapse tie" role="alert">
-              Tie! The human and computer live to fight another day
+              We have to try to score more points than the humans
             </div>
           </div>
         </div>
