Added scorecard functionality

--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
           </div>
         </div>
       </div>
+      <section class="container scoreboard">
+          <p>Wins: <span id="winValue">0</span></p>
+          <p>Losses: <span id="lossValue">0</span></p>
+          <p>Ties: <span id="tieValue">0</span></p>
+      </section>
+
     </div>
 
     <!-- Optional JavaScript -->
